<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSS Reader</string>
    <string name="action_settings">Update</string>
    <string name="title_activity_description">Description Activity</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="submit">Submit</string>
    <string name="title_activity_account_settings">AccountSettings</string>
    <string name="create_account">Create account</string>
    <string name="show_accounts_list">Show accounts list</string>
    <string name="account_settings">Account settings</string>
    <string name="info">Info</string>
    <string name="getToken">Get token</string>

</resources>