<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/add_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account" />

    <Button
        android:id="@+id/show_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_accounts_list" />

    <Button
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getToken" />

    <TextView
        android:id="@+id/tokenTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/info"/>

</LinearLayout>